fix min handle, fix name
divide handles, when max handle reaches 90+ and  min handle reaches 85+ min handle overlaps.

--- a/src/components/slider/Slider.css
+++ b/src/components/slider/Slider.css
@@ -10,7 +10,7 @@
 	-ms-touch-action: none;
 	touch-action: none;
 }
-.p-slider-rock {
+.p-slider-min-handle {
 	z-index: 2
 }
 .p-slider .p-slider-range {
